Add initial repository/service classes/interfaces and views for adding contact and confirmation page. Add controller actions for respective views and call to get all contacts.

--- a/ClarkCodingChallenge/Views/Contacts/Index.cshtml
+++ b/ClarkCodingChallenge/Views/Contacts/Index.cshtml
@@ -1,7 +1,12 @@
-﻿@{
+﻿@model Contact
+@{
     ViewData["Title"] = "Contacts Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+</div>
+<div class="col-6 text-end">
+    <a asp-action="AddContact" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Add New Contact</a>
+
 </div>
